# Mnemo

./: .gitignore  README.md  main.py  pyproject.toml
core/: agent.py
memory/long_term/: summarization.py
memory/short_term/: chat_buffer.py  vector_store.py
scripts/: demo.py  vector_store_test.py
