[project]
name = "mnemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.32.4",
    "langchain>=0.3.25",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.0.10",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
